<resources>
    <string name="app_name">Korepetycje</string>
    <string name="change">Zmień</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="telephone_number">Numer telefonu</string>
    <string name="City">Miejscowość</string>
    <string name="street">Ulica</string>
    <string name="house_number">Numer domu</string>
    <string name="flat_number">Numer mieszkania</string>
    <string name="date">Data korepetycji</string>
    <string name="save4">Zapisz</string>
    <string name="discard">Anuluj</string>
    <string name="add">+</string>
    <string name="day">Dzień</string>
    <string name="lessons_terms">Termin/y korepetycji:</string>
    <string name="lesson_time">Godzina korepetycji</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="term_splitter">o godz.</string>
    <string name="add_new_stduent">Dodaj nowego studenta</string>
    <string name="add_student">Dodaj ucznia</string>
    <string name="delete_student">Usuń ucznia</string>
    <string name="addresses">Adresy:</string>
    <string name="new_address">Nowy adres</string>
    <string name="new_term">Nowy termin</string>
    <string name="ok">OK</string>
    <string name="delete">Usuń</string>
    <string name="student">Uczeń</string>
    <string name="student_label_text">Uczeń #</string>
    <string name="search">Szukaj…</string>
    <string name="expand">Rozwiń…</string>
    <string name="collapse">Zwiń…</string>
    <string name="student_avatar_which_will_be_available_to_edit">Student avatar which will be available to edit…</string>
    <string name="time_from">Od</string>
    <string name="time_to">Do</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="detele_ask">USUNĄĆ?</string>
    <string name="timer_dialog_text">Czy rozpocząć odliczanie?</string>
    <string name="timer_dialog_title">Budzik</string>
    <string name="put_set">Poda przedział...</string>
    <string name="cancel_UP">ANULUJ</string>
</resources>
