<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:hint="@string/City"
        android:textColorLink="@color/green2" />

    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:hint="@string/street"
        android:textColorLink="@color/green2" />

    <EditText
        android:id="@+id/house_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:hint="@string/house_number"
        android:textColorLink="@color/green2"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/flat_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:hint="@string/flat_number"
        android:textColorLink="@color/green2"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/green2"
        android:text="@string/save4"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/discard_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/discard"
        tools:targetApi="lollipop" />

</LinearLayout>