<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_columnWeight="2"
    tools:targetApi="lollipop"
    >

    <TextView
        android:text="@string/City"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/city"
        android:textAlignment="center"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:layout_column="1"
        android:layout_row="0"
        android:hint="@string/City"
        android:layout_columnWeight="1"
        />


    <TextView
        android:text="@string/street"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/street"
        android:textAlignment="center"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:hint="@string/street"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        />


    <TextView
        android:text="@string/house_number"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/house_number"
        android:textAlignment="center"
        android:layout_gravity="fill"
        android:layout_margin="2dp"
        android:hint="@string/house_number"
        tools:ignore="TextFields"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        />


    <TextView
        android:text="@string/flat_number"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/flat_number"
        android:textAlignment="center"
        android:layout_gravity="fill"
        android:hint="@string/flat_number"
        tools:ignore="TextFields"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        />


</GridLayout>