<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_column="2"
    android:layout_row="3">

    <EditText
        android:id="@+id/hour"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="time"
        android:hint="@string/lesson_time"
        />

    <Spinner
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:id="@+id/days_array"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawSelectorOnTop="false"
        android:entries="@array/days_array"
        android:prompt="@string/day"
        />

    <Button
        android:layout_column="0"
        android:layout_row="2"
        android:id="@+id/saveButton"
        android:text="@string/save4"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_height="50dp"
        android:layout_width="150dp"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_column="1"
        android:layout_row="2"
        android:text="Anuluj"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_height="50dp"
        android:layout_width="150dp"
        />

</GridLayout>