<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TimePicker
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:amPmBackgroundColor="@color/green1"
        android:amPmTextColor="@color/green1"
        android:headerBackground="@color/green1"
        android:numbersBackgroundColor="@color/colorPrimary"
        android:numbersInnerTextColor="@color/green1"
        android:numbersSelectorColor="@android:color/holo_green_dark"
        android:numbersTextColor="@android:color/background_dark"
        android:timePickerMode="clock"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:id="@+id/days_array"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawSelectorOnTop="false"
        android:entries="@array/days_array"
        android:prompt="@string/day"
        android:dropDownWidth="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:spinnerMode="dialog"
        />

    <Spinner
        android:id="@+id/address_for_term"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawSelectorOnTop="false"
        android:hint="@string/day"
        android:dropDownWidth="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:spinnerMode="dialog"
        />

    <Button
        android:id="@+id/save_term_button"
        android:text="@string/save4"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:backgroundTint="@color/green2"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/discard"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/holo_red_light"
        tools:targetApi="lollipop"
        />

</LinearLayout>